@@ -6,8 +6,7 @@ import org.bukkit.command.CommandSender;
 import org.bukkit.command.TabCompleter;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
-import org.nandayo.farmquest.FarmQuest;
-import org.nandayo.farmquest.model.Farm;
+import org.nandayo.farmquest.model.farm.Farm;
 import org.nandayo.farmquest.model.quest.Quest;
 
 import java.util.ArrayList;
@@ -19,27 +18,23 @@ public class MainCommand implements CommandExecutor, TabCompleter {
 
     @Override
     public boolean onCommand(@NotNull CommandSender sender, @NotNull Command command, @NotNull String s, @NotNull String[] args) {
-        FarmQuest plugin = FarmQuest.getInstance();
-
         if(args.length >= 1) {
-            if (args[0].equalsIgnoreCase("pickquest")) {
-                new PickQuestCommand().onSubCommand(sender, command, s, args);
-                return true;
+            if(args[0].equalsIgnoreCase("farmer")) {
+                return new FarmerMenuCommand().onSubCommand(sender, command, s, args);
             } else if (args[0].equalsIgnoreCase("deliver")) {
-                new DeliverCommand().onSubCommand(sender, command, s, args);
-                return true;
+                return new DeliverCommand().onSubCommand(sender, command, s, args);
             } else if (args[0].equalsIgnoreCase("farmmarker")) {
-                new FarmMarkerCommand().onSubCommand(sender, command, s, args);
-                return true;
+                return new FarmMarkerCommand().onSubCommand(sender, command, s, args);
             } else if (args[0].equalsIgnoreCase("createregion")) {
-                new CreateRegionCommand().onSubCommand(sender, command, s, args);
-                return true;
+                return new CreateRegionCommand().onSubCommand(sender, command, s, args);
             } else if (args[0].equalsIgnoreCase("reload")) {
-                new ReloadCommand().onSubCommand(sender, command, s, args);
-                return true;
+                return new ReloadCommand().onSubCommand(sender, command, s, args);
             } else if (args[0].equalsIgnoreCase("farmmanager")) {
-                new FarmManagerCommand().onSubCommand(sender, command, s, args);
-                return true;
+                return new FarmManagerCommand().onSubCommand(sender, command, s, args);
+            } else if(args[0].equalsIgnoreCase("items")) {
+               return new ItemsCommand().onSubCommand(sender, command, s, args);
+            } else if(args[0].equalsIgnoreCase("removecompleted")) {
+                return new RemoveCompletedCommand().onSubCommand(sender, command, s, args);
             }
         }
         return true;
@@ -48,17 +43,20 @@ public class MainCommand implements CommandExecutor, TabCompleter {
     @Override
     public @Nullable List<String> onTabComplete(@NotNull CommandSender sender, @NotNull Command command, @NotNull String s, @NotNull String[] args) {
         if(args.length == 1) {
-            List<String> completions = new ArrayList<>(List.of("pickquest","deliver"));
-            for(String arg : Arrays.asList("farmmarker", "createregion", "reload","farmmanager")) {
+            List<String> completions = new ArrayList<>(List.of("deliver","farmer"));
+            for(String arg : Arrays.asList("farmmarker","createregion", "reload","farmmanager","items","removecompleted")) {
                 if(sender.hasPermission("farmquest." + arg)) completions.add(arg);
             }
             return completions;
         }
-        else if(args.length == 2 && args[0].equalsIgnoreCase("pickquest")) {
+        else if(args.length == 2 && Arrays.asList("farmer","farmmanager").contains(args[0])) {
+            return Farm.getRegisteredFarms().stream().filter(Objects::nonNull).map(Farm::getId).toList();
+        }
+        else if(args.length == 2 && args[0].equalsIgnoreCase("removecompleted")) {
             return Quest.getRegisteredQuests().stream().filter(Objects::nonNull).map(Quest::getId).toList();
         }
-        else if(args.length == 2 && args[0].equalsIgnoreCase("farmmanager")) {
-            return Farm.getRegisteredFarms().stream().filter(Objects::nonNull).map(Farm::getId).toList();
+        else if(args.length == 3 && args[0].equalsIgnoreCase("removecompleted")) {
+            return null;
         }
         return List.of();
     }
